5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1712_2504.log
== SUBMITION (2019-05-14 19:54:48) 
-- CODE:

 qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)

	t = t + 1
	
print(t)
-- EXECUTION TIME:
1.07827
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 2
    qv = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:56:39) 
-- CODE:
 qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)

	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.504599
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 1
    qv = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:57:47) 
-- CODE:
 qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)

	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.52585
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 1
    qv = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:57:54) 
-- CODE:
 qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)

	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.556272
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 1
    qv = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:58:33) 
-- CODE:
 qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)

	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.598423
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 1
    qv = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:58:37) 
-- CODE:
 qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)

	t = t + 1
	
print(t)
-- ERROR:
File "XXXX", line 1
    qv = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:58:44) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)

	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.352258
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
